--- a/tpl/skills.html
+++ b/tpl/skills.html
@@ -1,5 +1,5 @@
 <article ng-controller="EditableTableCtrl">
-    <div class="col-md-12">
+    <div class="col-md-12  no-mobile-padding">
         <form editable-form name="tableform" onaftersave="saveTable()" oncancel="cancel()" class="padding-right-half">
           <div class="col-md-12">
             <div class="col-md-8 no-left-padding">
